--- a/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
+++ b/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
@@ -8,6 +8,9 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Version>0.9.0</Version>
         <LangVersion>8</LangVersion>
+        <PackageProjectUrl>https://github.com/russkyc/dependency-injection</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/russkyc/dependency-injection</RepositoryUrl>
+        <PackageReleaseNotes>initial release</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
