--- a/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
+++ b/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
@@ -6,11 +6,11 @@
         <Copyright>Russell Camo 2023</Copyright>
         <Authors>Russell Camo</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.9.0</Version>
+        <Version>0.9.1</Version>
         <LangVersion>8</LangVersion>
         <PackageProjectUrl>https://github.com/russkyc/dependency-injection</PackageProjectUrl>
         <RepositoryUrl>https://github.com/russkyc/dependency-injection</RepositoryUrl>
-        <PackageReleaseNotes>initial release</PackageReleaseNotes>
+        <PackageReleaseNotes>- add dynamic resolve by name</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
