--- a/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
+++ b/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
@@ -7,6 +7,7 @@
         <UseWPF>true</UseWPF>
         <AssemblyName>DependencyInjectionDemo</AssemblyName>
         <RootNamespace>DependencyInjectionDemo</RootNamespace>
+        <Version>1.0.1</Version>
     </PropertyGroup>
 
     <ItemGroup>
