feat: refactor dependency injection and remove scoped type
- Removes the concept of scoped services, simplifying the process of registering and resolving services.

- Consolidates the methods for adding Singleton and Transient services, incorporating an optional builder action for additional service configuration.

- The version of the assembly has been updated to reflect the breaking changes incorporated.

 - The unnecessary method overloads and parameters were removed making the API more readable and easier to use.

--- a/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
+++ b/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
@@ -6,11 +6,11 @@
         <Copyright>Russell Camo 2023</Copyright>
         <Authors>Russell Camo</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.9.7</Version>
+        <Version>0.10.0</Version>
         <LangVersion>8</LangVersion>
         <PackageProjectUrl>https://github.com/russkyc/dependency-injection</PackageProjectUrl>
         <RepositoryUrl>https://github.com/russkyc/dependency-injection</RepositoryUrl>
-        <PackageReleaseNotes>- add dynamic resolve by name</PackageReleaseNotes>
+        <PackageReleaseNotes>- removed scoped type</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
