refactor: cleanup code implementations, add multiple assembly support

--- a/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
+++ b/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Russkyc.DependencyInjection\Russkyc.DependencyInjection.csproj" />
+      <ProjectReference Include="..\TestNewAssembly\TestNewAssembly.csproj" />
     </ItemGroup>
 
 </Project>
