chore: refactor project structure, enhance assembly scanning methods, bump version to 2.1.0
- Add support to find services from multiple assemblies
- Fixed container injection
- refactor code to separate concerns

--- a/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
+++ b/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
@@ -15,8 +15,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Russkyc.DependencyInjection.Demo.Services\Russkyc.DependencyInjection.Demo.Services.csproj" />
       <ProjectReference Include="..\Russkyc.DependencyInjection\Russkyc.DependencyInjection.csproj" />
-      <ProjectReference Include="..\TestNewAssembly\TestNewAssembly.csproj" />
     </ItemGroup>
 
 </Project>
