--- a/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
+++ b/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
@@ -6,11 +6,20 @@
         <Copyright>Russell Camo 2023</Copyright>
         <Authors>Russell Camo</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>2.0.0</Version>
+        <Version>2.1.0</Version>
         <LangVersion>8</LangVersion>
         <PackageProjectUrl>https://github.com/russkyc/dependency-injection</PackageProjectUrl>
         <RepositoryUrl>https://github.com/russkyc/dependency-injection</RepositoryUrl>
-        <PackageReleaseNotes>Add service registration by attribute, Removed BuilderServices. See repo for updated setup.</PackageReleaseNotes>
+        <PackageReleaseNotes>v2.X.X:
+            Changes:
+            - Add service registration by attribute
+            - Add multiple assembly support
+            
+            Fixes:
+            - Fixed container injection
+            
+            Breaking:
+            - Removed BuilderServices. See repo for updated setup.</PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
