--- a/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
+++ b/Russkyc.DependencyInjection/Russkyc.DependencyInjection.csproj
@@ -6,20 +6,11 @@
         <Copyright>Russell Camo 2023</Copyright>
         <Authors>Russell Camo</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>2.1.0</Version>
+        <Version>2.2.0</Version>
         <LangVersion>8</LangVersion>
         <PackageProjectUrl>https://github.com/russkyc/dependency-injection</PackageProjectUrl>
         <RepositoryUrl>https://github.com/russkyc/dependency-injection</RepositoryUrl>
-        <PackageReleaseNotes>v2.X.X:
-            Changes:
-            - Add service registration by attribute
-            - Add multiple assembly support
-            
-            Fixes:
-            - Fixed container injection
-            
-            Breaking:
-            - Removed BuilderServices. See repo for updated setup.</PackageReleaseNotes>
+        <PackageReleaseNotes></PackageReleaseNotes>
     </PropertyGroup>
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
