--- a/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
+++ b/Russkyc.DependencyInjection.Demo/Russkyc.DepencyInjection.Demo.csproj
@@ -7,7 +7,9 @@
         <UseWPF>true</UseWPF>
         <AssemblyName>DependencyInjectionDemo</AssemblyName>
         <RootNamespace>DependencyInjectionDemo</RootNamespace>
-        <Version>1.0.2</Version>
+        <Version>2.2.4</Version>
+        <PackageReleaseNotes>- Add Hosting style setup
+- Updated sample project</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,8 +17,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Russkyc.DependencyInjection.Demo.Services\Russkyc.DependencyInjection.Demo.Services.csproj" />
       <ProjectReference Include="..\Russkyc.DependencyInjection\Russkyc.DependencyInjection.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
